--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "express": "^4.16.4",
     "nativescript-angular": "~7.2.0",
     "nativescript-theme-core": "~1.0.4",
     "nativescript-ui-sidedrawer": "~6.0.0",
