--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "nativescript-angular": "~7.2.0",
+    "nativescript-camera": "^4.4.0",
     "nativescript-theme-core": "~1.0.4",
     "nativescript-ui-sidedrawer": "~6.0.0",
     "reflect-metadata": "~0.1.12",
